--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.12",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "^14.2.12",
     "@angular/compiler": "^14.2.12",
     "@angular/core": "^14.2.12",
     "@angular/forms": "^14.2.12",
+    "@angular/material": "^13.0.0",
     "@angular/platform-browser": "^14.2.12",
     "@angular/platform-browser-dynamic": "^14.2.12",
     "@angular/router": "^14.2.12",
+    "angular-ng-sidenav": "^1.0.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
-    "angular-ng-sidenav": "^1.0.4",
-    "primeicons": "^6.0.1",
-    "primeng": "^15.2.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^14.0.0-rc.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
