completed user changes

--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,9 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
               
             ],
@@ -112,6 +114,8 @@
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeflex/primeflex.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
               
             ],
