--- a/package.json
+++ b/package.json
@@ -20,13 +20,22 @@
     "@angular/platform-browser": "^14.2.12",
     "@angular/platform-browser-dynamic": "^14.2.12",
     "@angular/router": "^14.2.12",
+    "@fullcalendar/core": "4.4.0",
+    "@types/jasmine": "^4.3.0",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^18.7.13",
     "angular-ng-sidenav": "^1.0.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "chart.js": "^3.9.1",
+    "ngx-spinner": "^13.1.1",
+    "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
-    "primeng": "^14.0.0-rc.1",
+    "primeng": "^14.0.2",
+    "quill": "^1.3.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
